--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -19,7 +19,6 @@ require_once "$docroot/plugins/$plugin/include/paths.php";
 require_once "$docroot/plugins/$plugin/include/helpers.php";
 require_once "$docroot/plugins/dynamix.docker.manager/include/DockerClient.php";
 
-
 $DockerClient = new DockerClient();
 $DockerTemplates = new DockerTemplates();
 
@@ -33,6 +32,9 @@ $diagnosticsFile = htmlspecialchars(str_replace(' ','_',strtolower($var['NAME'])
 
 $cfg = parse_plugin_cfg($plugin);
 $cfg['dockerSearch'] = "yes";
+
+if ( $cfg['maxPerPage'] < 24 ) $cfg['maxPerPage'] = 24;
+
 if ( ! is_file($caPaths['warningAccepted']) ) {
 	$firstRun = "true";
 }
