Fixed: max per page appearing on credits & stats pages

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1816,6 +1816,7 @@ function showCredits() {
 	clearCategory(); clearSearchBox();
 	var credits = $('#caCredits').html();
 	updateDisplay(credits);
+	$(".maxPerPage").hide();
 }
 
 function showStatistics() {
@@ -1823,6 +1824,7 @@ function showStatistics() {
 	clearCategory(); clearSearchBox();
 	post({action:'statistics'},function(result) {
 		updateDisplay(result.statistics);
+		$(".maxPerPage").hide();
 	});
 }
 
