--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1306,14 +1306,18 @@ function uninstallApp(application,humanName) {
 }
 
 function postUninstallPlugin() {
-	if ( $(".selectedMenu").data("category") !== "inst_docker" && $(".selectedMenu").data("category") !== "inst_plugin") {
-		$(".caMenuItem").removeClass("selectedMenu");
-		var menuItem = $.find(".caMenuItem[data-category='installed_apps']");
-		$(menuItem).addClass("selectedMenu");
-		$(menuItem).next().show("slow");
+	if ( $(".selectedMenu").data("category") == "action_centre" ) {
+		actionCentre();
+	} else {
+		if ( $(".selectedMenu").data("category") !== "inst_docker" && $(".selectedMenu").data("category") !== "inst_plugin") {
+			$(".caMenuItem").removeClass("selectedMenu");
+			var menuItem = $.find(".caMenuItem[data-category='installed_apps']");
+			$(menuItem).addClass("selectedMenu");
+			$(menuItem).next().show("slow");
+		}
+		previousApps(true,false,data.previousAppsSection);
+		enableSearch();
 	}
-	previousApps(true,false,data.previousAppsSection);
-	enableSearch();
 }
 
 String.prototype.basename = function() {
@@ -1341,16 +1345,23 @@ function uninstallDocker(application,humanName) {
 			post({action:'uninstall_docker',application:application,noSpinner:true},function(result) {
 				myCloseAlert();
 				enableSearch();
-				if ( $(".selectedMenu").data("category") !== "inst_docker" && $(".selectedMenu").data("category") !== "inst_plugin") {
-					$(".caMenuItem").removeClass("selectedMenu");
-					var menuItem = $.find(".caMenuItem[data-category='installed_apps']");
-					$(menuItem).addClass("selectedMenu");
-					$(menuItem).next().show("slow");
+				if ( $(".selectedMenu").data("category") == "action_centre" ) {
+					post({action:'getPortsInUse'},function(data) {
+						portsInUse = data.portsInUse;
+						actionCentre();
+					});		
+				} else {
+					if ( $(".selectedMenu").data("category") !== "inst_docker" && $(".selectedMenu").data("category") !== "inst_plugin") {
+						$(".caMenuItem").removeClass("selectedMenu");
+						var menuItem = $.find(".caMenuItem[data-category='installed_apps']");
+						$(menuItem).addClass("selectedMenu");
+						$(menuItem).next().show("slow");
+					}
+					post({action:'getPortsInUse'},function(data) {
+						portsInUse = data.portsInUse;
+						previousApps(true,false,data.previousAppsSection);
+					});
 				}
-				post({action:'getPortsInUse'},function(data) {
-					portsInUse = data.portsInUse;
-					previousApps(true,false,data.previousAppsSection);
-				});
 			});
 		} else {
 			enableSearch();
