Prevent background update checks from running multiple times if it takes longer than an hour to complete

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -748,6 +748,9 @@ $(function(){
 				}
 			});
 		}
+		// set up action centre - run in background without tying anything up
+/* 		$.post("/plugins/<?=$plugin?>/include/exec.php",{action:'getPortsInUse'},function(data) {
+			var ret = JSON.parse(data);		 */
 	}
 });
 
