Don't clear checkboxes when navigating to subsection of previous apps

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -563,11 +563,11 @@ $(function(){
 				break;
 			case "prev_docker":
 				data.previousAppsSection = "docker";
-				previousApps(false,false,"docker");
+				previousApps(false,true,"docker");
 				break;
 			case "prev_plugins":
 				data.previousAppsSection = "plugins";
-				previousApps(false,false,"plugins");
+				previousApps(false,true,"plugins");
 				break;
 			case "action_centre":
 				data.previousAppsSection = "";
