Fixed: able to have stats display nothing

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/Apps.page
@@ -1913,10 +1913,11 @@ function showCredits() {
 
 function showStatistics() {
 	$(".multi_installDiv,.dockerSearch").hide();
-	clearCategory(); clearSearchBox();
+	clearCategory(); clearSearchBox(); 
 	post({action:'statistics'},function(result) {
 		updateDisplay(result.statistics);
 		$(".maxPerPage").hide();
+		disableSearch();
 	});
 }
 
